Change to homepage (added access to Control creationg, to be changed soon again)

--- a/views/static/home.ejs
+++ b/views/static/home.ejs
@@ -59,6 +59,8 @@ body{
   <a href="/Medico" class="button">Doctores</a>
   <a href="/Horario" class="button">Horarios</a>
   <a href="/cita/registrar" class="button">Pedir Cita</a>
+  <br><br><br><br>
+  <a href="/control/new" class="button">Nuevo Control</a>
 </div>    
     </ul>
 <body>
