Change of views

--- a/views/Medico/show.ejs
+++ b/views/Medico/show.ejs
@@ -95,8 +95,8 @@ body{
   </form>
 
 
-
 </div>
 <div id="container">
+<a href="/control/new" class="button">Ingresar Nuevo Control</a>
 <a class="button" href="/Medico"> Regresar </a>
 </div>
